[gd_scene load_steps=7 format=3 uid="uid://dpgo4yb12camk"]

[ext_resource type="Script" uid="uid://j5fxkes6ybgp" path="res://creature components/equipment/CTRL_equiment_slot.gd" id="1_yu3qa"]
[ext_resource type="Script" uid="uid://b7ygsw8ussd1a" path="res://creature components/equipment/equipSlot.gd" id="2_thnbh"]

[sub_resource type="ViewportTexture" id="ViewportTexture_6rmob"]
viewport_path = NodePath("SubViewport")

[sub_resource type="Animation" id="Animation_6n3tw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SubViewport/Node3D/item spinner:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_0rcow"]
resource_name = "spin"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SubViewport/Node3D/item spinner:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 6.28319, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7pfad"]
_data = {
&"RESET": SubResource("Animation_6n3tw"),
&"spin": SubResource("Animation_0rcow")
}

[node name="EquimentSlot" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yu3qa")

[node name="slot background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -158.5
offset_top = -247.5
offset_right = 158.5
offset_bottom = 247.5
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1311, 0.19, 0.19, 1)

[node name="TextureRect" type="TextureRect" parent="slot background"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -152.5
offset_top = 13.0
offset_right = 153.5
offset_bottom = 255.0
grow_horizontal = 2
texture = SubResource("ViewportTexture_6rmob")
expand_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="slot background"]
layout_mode = 0
offset_left = 8.0
offset_top = 267.0
offset_right = 311.0
offset_bottom = 490.0

[node name="name" type="Label" parent="slot background/VBoxContainer"]
layout_mode = 2
text = "twat text"

[node name="description" type="Label" parent="slot background/VBoxContainer"]
layout_mode = 2

[node name="SubViewport" type="SubViewport" parent="."]
own_world_3d = true

[node name="Node3D" type="Node3D" parent="SubViewport"]

[node name="Camera3D" type="Camera3D" parent="SubViewport/Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2)

[node name="item spinner" type="Node3D" parent="SubViewport/Node3D"]

[node name="equipData" type="Node" parent="."]
script = ExtResource("2_thnbh")
itemType = "weapon"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_7pfad")
}

[connection signal="insertSuccess" from="equipData" to="." method="_on_equip_data_insert_success"]
[connection signal="removedItem" from="equipData" to="." method="_on_equip_data_removed_item"]
[connection signal="swappedItem" from="equipData" to="." method="_on_equip_data_swapped_item"]
